--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "firebase": "^10.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-firebase-hooks": "^5.1.1"
+    "react-firebase-hooks": "^5.1.1",
+    "react-paypal-button-v2": "^2.6.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
